# husk

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
crates/husk-analyzer/: Cargo.toml
crates/husk-analyzer/src/: checker.rs  lib.rs  scope.rs
crates/husk-cli/: Cargo.toml
crates/husk-cli/src/: main.rs
crates/husk-cli/src/stdlib/: crypto.go  env.go  http.go  jwt.go  log.go  migrate.go  postgres.go  s3.go
crates/husk-codegen/: Cargo.toml
crates/husk-codegen/src/: codegen.rs
crates/husk-lexer/: Cargo.toml
crates/husk-lexer/src/: lexer.rs  token.rs
crates/husk-lsp/: Cargo.toml
crates/husk-lsp/src/: main.rs
crates/husk-parser/: Cargo.toml
crates/husk-parser/src/: ast.rs  formatter.rs  lib.rs  parser.rs
docs/: ANALISADOR.md  CLI.md  EDITORES.md  ERROS.md  EXPRESSOES.md  FUNCOES.md  MIDDLEWARES.md  MIGRATIONS.md  MODEL.md  MODULOS.md  README.md  ROTAS.md  SCHEMA.md  STRUCTS.md  TESTES.md  TIPOS.md
editors/vscode/: .gitignore  .vscodeignore  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.js  extension.ts
editors/vscode/syntaxes/: husk.tmLanguage.json
examples/: app.husk  app_v04.husk  hello.husk  stdlib_env.husk  usuarios.husk
samples/: api.husk  errors.husk  middleware.husk  models.husk  notificacoes.husk
