[package]
name = "husk-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "husk"
path = "src/main.rs"

[dependencies]
husk-lexer    = { path = "../husk-lexer" }
husk-parser   = { path = "../husk-parser" }
husk-codegen  = { path = "../husk-codegen" }
husk-analyzer = { path = "../husk-analyzer" }
