[package]
name = "husk-lsp"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "husk-lsp"
path = "src/main.rs"

[dependencies]
husk-lexer    = { path = "../husk-lexer" }
husk-parser   = { path = "../husk-parser" }
husk-analyzer = { path = "../husk-analyzer" }

lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1"
